//编译命令(要用cmd终端)：protoc -I=./  --cpp_out=./ ./piratical_caffe.snapshotModel.proto
syntax="proto2";

package piratical_caffe;    //经过编译后，对应着生成的c++文件中的命名空间

message snapshotModel
{
	message paramBlock
	{
		required string     param_type        = 1; 
		required string     layer_name        = 2;      
		required int32       kernel_n         = 3;              
		required int32       kernel_c         = 4;   
		required int32       kernel_h         = 5; 				
		required int32       kernel_w         = 6;
		
		message paramValue
		{
			required double value = 1;    
		}
		repeated paramValue param_value       = 7; 		
	}

   repeated paramBlok param_block = 1;  //protobuf中repeated类型相当于vector（可以动态分配内存的容器），可以用来存放N个相同类型的内容

}